# migraine

./: Cargo.toml  README.md
src/: args.rs  color.rs  downsample.rs  error.rs  image.rs  io.rs  kmean.rs  logger.rs  main.rs  migraine.rs  palette.rs  rustc-ice-2026-05-15T13_36_40-84283.txt  scale.rs  visualizer.rs
src/algorithm/: autocorrelation.rs  kmeans.rs  kmeans_pp.rs  mod.rs
src/color/: mod.rs  palette.rs  rgb.rs
src/downsample/: downsampler.rs  mod.rs  sample_pattern.rs
src/scale/: guesser.rs  mod.rs  otsu.rs  scale_guesser.rs
src/types/: color.rs  color_frequency.rs  image.rs  mod.rs  palette.rs  simple_image.rs
visualizer/: package.json  server.js
visualizer/public/: index.html
